--- a/package.json
+++ b/package.json
@@ -2,25 +2,47 @@
   "name": "interview",
   "version": "0.1.0",
   "private": true,
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
+    "@electron/remote": "^2.0.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.36",
+    "@types/path-browserify": "^1.0.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "electron-is-dev": "^2.0.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.1.1",
+    "styled-components": "^6.0.0-rc.6",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test",
+    "react-eject": "react-scripts eject",
+    "start-renderer": "cross-env BROWSER=none npm run react-start",
+    "start-main": "electron .",
+    "compile-main": "tsc ./public/electron.ts",
+    "start-main-after-renderer": "wait-on http://localhost:3000 && npm run start-main",
+    "dev": "tsc ./public/electron.ts && concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && npx electron .\"",
+    "pack": "npm run compile-main && npm run react-build && electron-builder --dir",
+    "build": "rm -rf build dist && npm run compile-main && npm run react-build && electron-builder build",
+    "build:osx": "npm run build -- --mac",
+    "build:linux": "npm run build -- --linux",
+    "build:win": "npm run build -- --win",
+    "predist": "npm run compile-main"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +61,63 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@types/styled-components": "^5.1.26",
+    "concurrently": "^8.2.0",
+    "cross-env": "^7.0.3",
+    "electron": "^25.2.0",
+    "electron-builder": "^24.4.0",
+    "wait-on": "^7.0.1"
+  },
+  "build": {
+    "productName": "interview",
+    "appId": "hy.univ.interview",
+    "asar": true,
+    "protocols": {
+      "name": "interview",
+      "schemes": [
+        "interview"
+      ]
+    },
+    "mac": {
+      "target": [
+        "default"
+      ]
+    },
+    "dmg": {
+      "title": "tournant"
+    },
+    "win": {
+      "target": [
+        "zip",
+        "nsis"
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb",
+        "rpm",
+        "zip",
+        "tar.gz"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": false,
+      "installerLanguages": [
+        "en_US",
+        "ko_KR"
+      ],
+      "language": "1042"
+    },
+    "directories": {
+      "output": "dist/",
+      "app": ".",
+      "buildResources": "assets"
+    },
+    "extraResources": "voice/*.m4a"
   }
 }
