--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "cross-env": "^7.0.3",
     "electron": "^25.2.0",
     "electron-builder": "^24.4.0",
+    "electron-rebuild": "^3.2.9",
     "wait-on": "^7.0.1"
   },
   "build": {
@@ -94,7 +95,6 @@
         "zip",
         "nsis"
       ]
-
     },
     "linux": {
       "target": [
