--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-scripts": "5.0.1",
     "react-webcam": "^7.1.1",
     "sqlite3": "^5.1.6",
-    "styled-components": "^6.0.0-rc.6",
+    "styled-components": "^5.3.1",
     "typescript": "^4.9.5",
     "url": "^0.11.1",
     "util": "^0.12.5",
